# aws-athena-agent

./: CLAUDE.md  README.md  pyproject.toml  query.py  schema.txt
.claude/: settings.json
.claude/hooks/: check-query-dt.sh  cleanup-output.sh  protect-validate-fn.sh
docs/: system-diagram.md
queries/: blast_radius.sql  error_rate_by_endpoint.sql  errors_by_time_for_endpoint.sql
sample_data/: exercise_prompts.md  generate.py  setup_tables.sql  upload.sh
sample_data/data/accounts/dt=2026-01-13/: data.parquet
sample_data/data/accounts/dt=2026-01-14/: data.parquet
sample_data/data/accounts/dt=2026-01-15/: data.parquet
sample_data/data/api_requests/dt=2026-01-13/: data.parquet
sample_data/data/api_requests/dt=2026-01-14/: data.parquet
sample_data/data/api_requests/dt=2026-01-15/: data.parquet
sample_data/data/error_logs/dt=2026-01-13/: data.parquet
sample_data/data/error_logs/dt=2026-01-14/: data.parquet
sample_data/data/error_logs/dt=2026-01-15/: data.parquet
sample_data/data/sessions/dt=2026-01-13/: data.parquet
sample_data/data/sessions/dt=2026-01-14/: data.parquet
sample_data/data/sessions/dt=2026-01-15/: data.parquet
sample_data/data/users/dt=2026-01-13/: data.parquet
sample_data/data/users/dt=2026-01-14/: data.parquet
sample_data/data/users/dt=2026-01-15/: data.parquet
